# p_0

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yaml  codecov.yaml  codecov.yaml.disable
cmake/: build_types-config.cmake  options-config.cmake  prebuild_dependency.cmake
src/: CMakeLists.txt  global.h  main.cxx
src/overlay/: CMakeLists.txt  main.cxx  overlay.cxx  overlay.h  overlay_x11.cxx  overlay_x11.h
src/tests/: CMakeLists.txt  test.cpp
sysroot/Linux/include/cpptrace/: version.hpp
sysroot/Linux/include/libassert/: version.hpp
sysroot/Linux/lib/: libSDL3d.so.0
sysroot/Linux/lib/cmake/SDL3/: SDL3sharedTargets-debug.cmake  SDL3sharedTargets-relwithdebinfo.cmake
sysroot/Linux/lib/cmake/cpptrace/: cpptrace-config-version.cmake  cpptrace-config.cmake  cpptrace-targets-debug.cmake  cpptrace-targets-relwithdebinfo.cmake  cpptrace-targets.cmake
sysroot/Linux/lib/cmake/libassert/: libassert-config-version.cmake  libassert-targets-debug.cmake  libassert-targets-relwithdebinfo.cmake  libassert-targets.cmake
sysroot/Linux/lib/cmake/libdwarf/: libdwarf-targets-debug.cmake  libdwarf-targets-relwithdebinfo.cmake  libdwarf-targets.cmake
sysroot/Linux/lib/cmake/spdlog/: spdlogConfigTargets-relwithdebinfo.cmake
sysroot/Linux/lib/cmake/zstd/: zstdTargets-debug.cmake  zstdTargets.cmake
sysroot/Linux/lib/pkgconfig/: libdwarf.pc  libzstd.pc  sdl3.pc  spdlog.pc
sysroot/lib/cmake/SDL3/: SDL3staticTargets-debug.cmake  SDL3testTargets-debug.cmake
sysroot/lib/pkgconfig/: sdl3.pc
